<resources>
    <string name="app_name">Workout</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have an account?<U>Sign Up</U></string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="track">track</string>
    <string name="plan">plan</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>